# NOT_AE

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  test.py  train.py
configs/: train_artbench_l1_cost.yml  train_artbench_l2_cost.yml  train_celeba_l1_ae.yml  train_celeba_l1_cost.yml  train_celeba_l2_ae.yml  train_celeba_l2_cost.yml  train_celeba_perceptual_ae.yml  train_celeba_perceptual_cost.yml  train_mnist_l2_cost.yml
not_ae/: __init__.py  cost.py  trainer.py
not_ae/datasets/: __init__.py  artbench.py  celeba.py  common.py  mnist.py
not_ae/models/: __init__.py  dumb.py  mlp.py  resnet.py  unet.py
not_ae/utils/: __init__.py  callbacks.py  general.py  metrics.py  perceptual_networks.py  transform.py
scripts/: train.sh
tools/: compute_fid_stats.py
